# TransactionAnalysis2

./: .env.exemple  README.md  logging_config.py  main.py  pyproject.toml  settings.py
data/: operations.xlsx
src/: config.py  external_api.py  logger.py  reports.py  services.py  utils.py  views.py
tests/: test_decorators.py  test_reports.py  test_services.py  test_utils.py  test_views.py
